==> atomvm/AtomVM/src/platforms/zephyr/src/lib/i2c_driver.c <==
#include <errno.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <string.h>
#include <zephyr/device.h>
#include <zephyr/devicetree.h>
#include <zephyr/drivers/i2c.h>
#include <zephyr/kernel.h>
#include <context.h>
#include <defaultatoms.h>
#include <erl_nif.h>
#include <erl_nif_priv.h>
#include <globalcontext.h>
#include <interop.h>
#include <memory.h>
#include <nifs.h>
#include <port.h>
#include <term.h>
#include <utils.h>
#include <trace.h>
#include "avm_log.h"
#include "zephyros_sys.h"
#define TAG "i2c_driver"
#define I2C_TARGET_MAX 256

static term nif_i2c_init(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);
    term opts = argv[0];
    VALIDATE_VALUE(opts, term_is_list);

    static const char *const peripheral_str = ATOM_STR("\xA", "peripheral");
    term peripheral_term = interop_kv_get_value(opts, peripheral_str, ctx->global);

    const struct device *dev = get_i2c_device(peripheral_term);
    if (IS_NULL_PTR(dev)) {
        if (UNLIKELY(memory_ensure_free(ctx, TUPLE_SIZE(2)) != MEMORY_GC_OK)) {
            RAISE_ERROR(OUT_OF_MEMORY_ATOM);
        }
        return make_error_tuple(ctx, ATOM_STR("\x6", "enodev"));
    }
    if (!device_is_ready(dev)) {
        if (UNLIKELY(memory_ensure_free(ctx, TUPLE_SIZE(2)) != MEMORY_GC_OK)) {
            RAISE_ERROR(OUT_OF_MEMORY_ATOM);
        }
        return make_error_tuple(ctx, ATOM_STR("\x9", "not_ready"));
    }

    term configure_result = configure_i2c(ctx, dev, opts);
    if (configure_result != OK_ATOM) {
        return configure_result;
    }

    struct I2CResource *rsrc_obj = enif_alloc_resource(i2c_resource_type, sizeof(struct I2CResource));
    if (IS_NULL_PTR(rsrc_obj)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }
    rsrc_obj->dev = dev;
    rsrc_obj->closed = false;
#ifdef CONFIG_I2C_TARGET
    static const char *const own_address_str = ATOM_STR("\xB", "own_address");
    term own_address_term = interop_kv_get_value_default(opts, own_address_str, term_from_int(0), ctx->global);
    uint16_t own_address;
    if (UNLIKELY(!term_to_i2c_addr(own_address_term, &own_address))) {
        enif_release_resource(rsrc_obj);
        RAISE_ERROR(BADARG_ATOM);
    }
    rsrc_obj->target_registered = false;
    rsrc_obj->own_address = own_address;
    memset(&rsrc_obj->target_cfg, 0, sizeof(rsrc_obj->target_cfg));
    rsrc_obj->op = I2C_TARGET_IDLE;
    rsrc_obj->buf_len = 0;
    rsrc_obj->buf_pos = 0;
    rsrc_obj->waiter_pid = 0;
    rsrc_obj->global = ctx->global;
#endif

    if (UNLIKELY(memory_ensure_free(ctx, TERM_BOXED_RESOURCE_SIZE) != MEMORY_GC_OK)) {
        enif_release_resource(rsrc_obj);
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }
    term obj = term_from_resource(rsrc_obj, &ctx->heap);
    enif_release_resource(rsrc_obj);

    if (UNLIKELY(memory_ensure_free_with_roots(ctx, TUPLE_SIZE(2), 1, &obj, MEMORY_CAN_SHRINK) != MEMORY_GC_OK)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }

    return create_pair(ctx, OK_ATOM, obj);
}

static term nif_i2c_mem_read(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);

    struct I2CResource *rsrc_obj;
    if (UNLIKELY(!get_i2c_resource(ctx, argv[0], &rsrc_obj))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    uint16_t addr;
    if (UNLIKELY(!term_to_i2c_addr(argv[1], &addr))) {
        RAISE_ERROR(BADARG_ATOM);
    }

    uint8_t mem_addr_buf[2];
    size_t mem_addr_len;
    if (UNLIKELY(!get_mem_addr(argv[2], argv[3], mem_addr_buf, &mem_addr_len))) {
        RAISE_ERROR(BADARG_ATOM);
    }

    VALIDATE_VALUE(argv[4], term_is_integer);
    avm_int_t count = term_to_int(argv[4]);
    if (UNLIKELY(count < 0 || count > INT32_MAX)) {
        RAISE_ERROR(BADARG_ATOM);
    }
    int64_t timeout_ms;
    if (UNLIKELY(!get_timeout_ms(argv[5], &timeout_ms))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    UNUSED(timeout_ms);

    if (UNLIKELY(memory_ensure_free_opt(ctx, TUPLE_SIZE(2) + term_binary_heap_size(count), MEMORY_NO_GC) != MEMORY_GC_OK)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }
    term data = term_create_uninitialized_binary(count, &ctx->heap, ctx->global);
    if (UNLIKELY(term_is_invalid_term(data))) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }
    uint8_t *buf = (uint8_t *) term_binary_data(data);

    int err = i2c_write_read(rsrc_obj->dev, addr, mem_addr_buf, mem_addr_len, buf, (uint32_t) count);
    if (err != 0) {
        return zephyr_i2c_error_to_term(ctx, err);
    }
    return create_pair(ctx, OK_ATOM, data);
}

static term nif_i2c_mem_write(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);

    struct I2CResource *rsrc_obj;
    if (UNLIKELY(!get_i2c_resource(ctx, argv[0], &rsrc_obj))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    uint16_t addr;
    if (UNLIKELY(!term_to_i2c_addr(argv[1], &addr))) {
        RAISE_ERROR(BADARG_ATOM);
    }

    uint8_t mem_addr_buf[2];
    size_t mem_addr_len;
    if (UNLIKELY(!get_mem_addr(argv[2], argv[3], mem_addr_buf, &mem_addr_len))) {
        RAISE_ERROR(BADARG_ATOM);
    }

    VALIDATE_VALUE(argv[4], term_is_binary);
    int64_t timeout_ms;
    if (UNLIKELY(!get_timeout_ms(argv[5], &timeout_ms))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    UNUSED(timeout_ms);

    const uint8_t *data = (const uint8_t *) term_binary_data(argv[4]);
    size_t len = term_binary_size(argv[4]);
    size_t transfer_len = mem_addr_len + len;
    if (UNLIKELY(transfer_len > INT32_MAX)) {
        RAISE_ERROR(BADARG_ATOM);
    }

    uint8_t *transfer_buf = malloc(transfer_len);
    if (IS_NULL_PTR(transfer_buf)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }
    memcpy(transfer_buf, mem_addr_buf, mem_addr_len);
    memcpy(transfer_buf + mem_addr_len, data, len);

    int err = i2c_write(rsrc_obj->dev, transfer_buf, (uint32_t) transfer_len, addr);
    free(transfer_buf);
    if (err != 0) {
        return make_transfer_error(ctx, err);
    }
    return term_from_int((avm_int_t) len);
}

static const struct Nif *i2c_nif_get_nif(const char *nifname)
{
    if (strncmp("i2c:", nifname, 4) != 0) {
        return NULL;
    }
    const char *rest = nifname + 4;
    if (strcmp("init/1", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_init_nif;
    }
    if (strcmp("deinit/1", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_deinit_nif;
    }
    if (strcmp("master_transmit/4", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_master_transmit_nif;
    }
    if (strcmp("master_receive/4", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_master_receive_nif;
    }
    if (strcmp("mem_read/6", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_mem_read_nif;
    }
    if (strcmp("mem_write/6", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_mem_write_nif;
    }
    if (strcmp("is_device_ready/4", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_is_device_ready_nif;
    }
    if (strcmp("target_transmit_nif/3", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_target_transmit_nif;
    }
    if (strcmp("target_receive_nif/3", rest) == 0) {
        TRACE("Resolved i2c nif %s ...\n", nifname);
        return &i2c_target_receive_nif;
    }
    return NULL;
}
